CSS: fixed left column width on search results so text isn't truncated

--- a/app/assets/stylesheets/mdl.scss
+++ b/app/assets/stylesheets/mdl.scss
@@ -537,7 +537,7 @@ h3.document-title-heading {
 	color: #6d6e71;
 	float: left;
 	font-weight: bold;
-	width: 180px;
+	width: 200px;
 	clear: left;
 	text-align: right;
 	overflow: hidden;
@@ -547,7 +547,7 @@ h3.document-title-heading {
 }
 
 .dl-horizontal dd {
-	margin-left: 190px;
+	margin-left: 210px;
 	margin-bottom: 8px;
 }
 
